--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -7,21 +7,31 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 10px 10px 10px;
 }
 
 .title {
   background: #e3f4ff;
+  padding: 10px;
+  font-size: 15px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 15px 10px 15px;
+  margin-bottom: 10px;
 }
 
 .button-container {
+  padding: 10px 0;
+  text-align: center;
   background: #e3f4ff;
 }
 
 button {
+  display: block;
   background: white;
   border: 1px solid #eee;
+  margin: 0 auto;
+  padding: 10px 20px;
 }
