--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  padding: 10px;
+  justify-content: center;
+  align-items: center;
 }
 
 .logo {
@@ -9,11 +13,14 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  gap: 10px;
 }
 
 a {
@@ -22,4 +29,21 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+
+.left-links {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.left-links-container {
+  display: flex;
+  justify-content: flex-start;
+  padding: 0;
+}
+
+.right-links-container {
+  display: flex;
+  justify-content: flex-end;
+  padding: 0;
 }
