--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -12,6 +12,12 @@ img {
   font-weight: 900;
 }
 
+header {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
 /* do not edit this footer */
 .footer {
   position: fixed;
@@ -23,4 +29,25 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 32px 20px;
+  gap: 52px;
+}
+
+.card-1, .card-2, .card-3, .card-4 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 10px;
+  width: 200px;
+}
+
+.text {
+  text-align: center;
 }
