--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 img {
@@ -16,6 +19,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 7px;
 }
 
 input {
@@ -23,4 +27,55 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+ul {
+  list-style: none;
+  padding-left: 0px;
+}
+
+a {
+  text-decoration: none;
+  color: grey;
+}
+
+.header,
+.left-links,
+.right-links,
+.footer {
+  display: flex;
+  gap: 10px;
+  font-size: 13px;
+}
+
+.header,
+.footer {
+  padding: 0 7px;
+  color: green;
+}
+
+.footer {
+  background-color: #eeeeee;
+}
+
+.footer a {
+  color: grey;
+}
+
+.left-links {
+  margin-right: auto;
+}
+
+.content {
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 50px;
+}
+
+.input {
+  width: 600px;
+  text-align: center;
 }
