--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -10,8 +10,8 @@ body {
   height: 72px;
   background: darkmagenta;
   color: white;
-  font-weight: bold;
-  font-size: larger;
+  font-weight: 900;
+  font-size: 32px;
   padding: 5px 7px 7px;
   flex: 0;
 }
@@ -37,13 +37,15 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
-  height: 250px;
+  /* height: 250px; */
   width: 250px;
-  padding: 10px;
-  display: flex;
-  align-items: flex-start;
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: auto;
+  align-self: stretch;
   font-size: smaller;
-  flex: 0 1 auto;
+  flex: 0 1 1;
 }
 
 .mid-content {
@@ -64,11 +66,18 @@ ul {
 a {
   text-decoration: none;
   color:white;
+  font-size: 24px;
 }
 
 .card-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  align-items:baseline;
+  row-gap: 15px;
+  align-items:center;
+  padding: 48px;
+}
+
+li {
+  flex: 1;
 }
