--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -7,8 +7,12 @@ html {
 .container {
   text-align: center;
   height: 100%;
+  width: 100vb;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  gap: 15px;
+  grid-template: 84px 84px 420px 84px / 350px 1050px;
 }
 
 .container div {
@@ -22,10 +26,12 @@ html {
 
 .header {
   background-color: #006157;
+  grid-area: 1 / 1 / 1 / 3;
 }
 
 .sidebar {
   background-color: #005B94;
+  grid-area: 2 / 1 / 4 / 2;
 }
 
 .nav {
@@ -38,6 +44,7 @@ html {
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / 3;
 }
 
 .article p {
