--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -89,3 +89,81 @@
   font-size: 13px;
   font-weight: normal;
 }
+
+
+/* SOLVE */
+
+.container {
+  display: grid;
+  grid-template-rows: 2fr 1fr 12fr 1fr;
+  /* grid-template-rows: 120px 60px 540px 60px; */
+  grid-template-columns: 1fr 3fr;
+  gap: 3px;
+  align-items: stretch;
+  justify-content: stretch;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.header, .footer {
+  grid-column: 1 / 3;
+}
+
+.sidebar {
+  grid-row: 2 / 4
+}
+
+.header {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  align-items: center;
+}
+
+.header .logo {
+  justify-self: flex-start;
+}
+
+.header ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-items: flex-start;
+}
+
+.nav {
+  display: grid;
+  align-items: center;
+}
+
+.nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.sidebar {
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  gap: 40px;
+}
+
+.article {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+}
+
+.card {
+  margin: 5px;
+  width: 200px;
+  height: 150px;
+}
+
+.title {
+  padding-bottom: 10px;
+}
+
+.sidebar > div {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
